Тесты для LogManager